--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -23,6 +23,9 @@ var musicStarted = false;
 var gameRunning = false;
 var gameOver = false;
 
+var breakableWalls = [];
+var wallLifetime = 150; // Frames until the wall breaks if not shot
+
 function startGame() {
     if (!gameRunning) {
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image");
@@ -108,6 +111,13 @@ function component(width, height, color, x, y, type) {
     }
 }
 
+function createWall(pillarX, topHeight, bottomHeight) {
+    var wallY = topHeight + ((myGameArea.canvas.height - topHeight - bottomHeight) / 2) - 25; // Center wall between pillars
+    var wall = new component(10, 50, "red", pillarX, wallY, "wall"); // Wall properties
+    wall.lifetime = wallLifetime; // Set its lifetime
+    breakableWalls.push(wall); // Add to the wall array
+}
+
 function updateGameArea() {
     if (!gameOver) {
         myGameArea.clear();
@@ -140,12 +150,40 @@ function updateGameArea() {
 
             myObstacles.push(new component(10, height, "green", x, 0));  // Top pole
             myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, "green", x, height + gap));  // Bottom pole
+
+            // Create a wall between the new pillars
+            createWall(x, height, myGameArea.canvas.height - height - gap); // Create wall between top and bottom pillars
         }
 
         // Move obstacles
         for (var i = 0; i < myObstacles.length; i++) {
             myObstacles[i].x += -2;  // Make sure obstacles move at a reasonable speed
             myObstacles[i].update();
+        }
+
+        // Update breakable walls
+        for (var i = breakableWalls.length - 1; i >= 0; i--) {
+            breakableWalls[i].lifetime--;
+
+            // Check for collisions with projectiles
+            for (var j = myProjectiles.length - 1; j >= 0; j--) {
+                if (breakableWalls[i].crashWith(myProjectiles[j])) {
+                    myProjectiles.splice(j, 1); // Remove the projectile
+                    breakableWalls.splice(i, 1); // Remove the wall
+                    break; // Exit the loop to prevent modifying the array during iteration
+                }
+            }
+
+            // If lifetime is over, end the game
+            if (breakableWalls[i].lifetime <= 0) {
+                gameOver = true;
+                myGameArea.stop();
+                break;
+            }
+
+            // Move and update the wall
+            breakableWalls[i].x -= 2; // Move the wall to the left
+            breakableWalls[i].update(); // Draw the wall
         }
 
         // Update the position of the game piece (character)
