--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -22,7 +22,9 @@ var backgroundImage;
 var musicStarted = false;
 var gameRunning = false;
 var gameOver = false;
-var breakableWalls = []; // Array to hold breakable walls
+
+var breakableWalls = [];
+var wallLifetime = 150; // Frames until the wall breaks if not shot
 
 function startGame() {
     if (!gameRunning) {
@@ -109,31 +111,13 @@ function component(width, height, color, x, y, type) {
     }
 }
 
-// Function to create breakable walls
-function createWall(x, topHeight, bottomHeight) {
-    var wallHeight = bottomHeight - topHeight; // Calculate the height of the wall
-    if (wallHeight > 0) {
-        var wall = new component(10, wallHeight, "red", x - 5, topHeight + 5, "wall");
-        breakableWalls.push(wall);
-    }
+function createWall(pillarX, topHeight, bottomHeight) {
+    var wallY = topHeight + ((myGameArea.canvas.height - topHeight - bottomHeight) / 2) - 25; // Center wall between pillars
+    var wall = new component(20, 50, "red", pillarX - 10, wallY, "wall"); // Increase width and adjust position
+    wall.lifetime = wallLifetime; // Set its lifetime
+    breakableWalls.push(wall); // Add to the wall array
 }
 
-// Function to check for projectile collisions with walls
-function checkProjectileCollision() {
-    for (var i = 0; i < myProjectiles.length; i++) {
-        for (var j = 0; j < breakableWalls.length; j++) {
-            if (myProjectiles[i].crashWith(breakableWalls[j])) {
-                // Remove the wall and the projectile upon collision
-                breakableWalls.splice(j, 1);
-                myProjectiles.splice(i, 1);
-                i--; // Adjust index after removal
-                break; // Exit inner loop to avoid double removal
-            }
-        }
-    }
-}
-
-// Update the game area
 function updateGameArea() {
     if (!gameOver) {
         myGameArea.clear();
@@ -166,9 +150,9 @@ function updateGameArea() {
 
             myObstacles.push(new component(10, height, "green", x, 0));  // Top pole
             myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, "green", x, height + gap));  // Bottom pole
-            
-            // Create breakable wall between pillars
-            createWall(x, height, myGameArea.canvas.height - height - gap);
+
+            // Create a wall between the new pillars
+            createWall(x, height, myGameArea.canvas.height - height - gap); // Create wall between top and bottom pillars
         }
 
         // Move obstacles
@@ -177,26 +161,34 @@ function updateGameArea() {
             myObstacles[i].update();
         }
 
-        // Move walls
-        for (var i = 0; i < breakableWalls.length; i++) {
-            breakableWalls[i].x += -2; // Move the wall
-            breakableWalls[i].update();
+        // Update breakable walls
+        for (var i = breakableWalls.length - 1; i >= 0; i--) {
+            breakableWalls[i].lifetime--;
 
-            // Check for collision with player
-            if (myGamePiece.crashWith(breakableWalls[i])) {
-                crashSound.play();
+            // Check for collisions with projectiles
+            for (var j = myProjectiles.length - 1; j >= 0; j--) {
+                if (breakableWalls[i].crashWith(myProjectiles[j])) {
+                    myProjectiles.splice(j, 1); // Remove the projectile
+                    breakableWalls.splice(i, 1); // Remove the wall
+                    break; // Exit the loop to prevent modifying the array during iteration
+                }
+            }
+
+            // If lifetime is over, end the game
+            if (breakableWalls[i].lifetime <= 0) {
                 gameOver = true;
                 myGameArea.stop();
                 break;
             }
+
+            // Move and update the wall
+            breakableWalls[i].x -= 2; // Move the wall to the left
+            breakableWalls[i].update(); // Draw the wall
         }
 
         // Update the position of the game piece (character)
         myGamePiece.newPos();
         myGamePiece.update();
-
-        // Check for projectile collisions with walls
-        checkProjectileCollision();
 
         // Update projectiles
         for (var i = 0; i < myProjectiles.length; i++) {
@@ -262,7 +254,7 @@ function stopMove(e) {
 }
 
 function shootProjectile() {
-    var projectile = new component(10, 10, "blue", myGamePiece.x + myGamePiece.width, myGamePiece.y + (myGamePiece.height / 2 - 5), "projectile");
+    var projectile = new component(5, 5, "blue", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
     projectile.speedX = 5; // Projectile speed
     myProjectiles.push(projectile); // Add each new projectile to the array
 }
