--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -149,7 +149,7 @@ function updateGameArea() {
             var gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
 
             // Use an image for the top and bottom pillars
-            var pillarImage = 'https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/american flag.jpeg; // Replace with your image URL
+            var pillarImage = 'https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/american flag.jpeg'; // Replace with your image URL
             myObstacles.push(new component(10, height, pillarImage, x, 0, "image"));  // Top pole
             myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, pillarImage, x, height + gap, "image"));  // Bottom pole
 
