--- a/canvas/practice2.html
+++ b/canvas/practice2.html
@@ -30,7 +30,7 @@ var score = 0; // Initialize score
 function startGame() {
     if (!gameRunning) {
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/toy man_processed.jpeg", 10, 120, "image");
-        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+        myScore = new component("30px", "Consolas", "green", 280, 40, "text");
 
         crashSound = new Audio('crash.mp3'); 
         backgroundMusic = new Audio('background.mp3');
